k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: node-server
  name: node-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-server
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: node-server
    spec:
      containers:
        - image: swarntech/nodeproject:latest
          name: nodeproject
          ports:
            - containerPort: 8000
          resources: {}
