k8s/server-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-server-ip-service
spec:
  type: ClusterIP
  selector:
    app: node-server
  ports:
    - port: 8000
      targetPort: 8000
