k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/(.*)"
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 80
          - pathType: Prefix
            path: "/none/?(.*)"
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 80
          - pathType: Prefix
            path: "/backend/?(.*)"
            backend:
              service:
                name: server-kaniko-cluster-ip-service
                port:
                  number: 80
          - pathType: Prefix
            path: "/service/?(.*)"
            backend:
              service:
                name: node-server-ip-service
                port:
                  number: 8000
